# catAway

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
scripts/: install.sh
src/: Camera.cpp  Camera.h  Image.cpp  Image.h  Logger.cpp  Logger.h  MotionAlgorithm.cpp  MotionAlgorithm.h  ThreadBase.cpp  ThreadBase.h  VideoEvent.cpp  VideoEvent.h
